# ldr-benchmarks

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTORS.md  METHODOLOGY.md  README.md  hf_README.md  pyproject.toml
.github/workflows/: codeql.yml  gitleaks.yml  mypy.yml  ossf-scorecard.yml  osv-scanner.yml  publish.yml  semgrep.yml  validate.yml  zizmor.yml
leaderboards/: all.csv  simpleqa.csv  xbench-deepsearch.csv
results/: kwhyte7_qwen3-4b_2026-02-18.yaml
results/simpleqa/langgraph-agent/serper/: gemma4-26b_2026-04-14.yaml  gemma4-31b_2026-04-22.yaml  gpt-oss-120b_2026-04-19.yaml  gpt-oss-20b_2026-04-10.yaml  gpt-oss-20b_2026-04-12.yaml  qwen3.5-9b_2026-04-06.yaml  qwen3.5-9b_2026-04-07.yaml  qwen3.6-27b_2026-05-10.yaml  qwen3.6-27b_2026-05-11.yaml  qwen3.6-latest_2026-04-18.yaml
results/simpleqa/source-based/serper/: qwen3-4b_2026-02-18.yaml  qwen3.5-9b_2026-04-06.yaml  qwen3.5-9b_2026-04-07.yaml
results/xbench-deepsearch/langgraph-agent/serper/: qwen3.5-9b_2026-04-07.yaml  qwen3.6-27b_2026-05-01.yaml  qwen3.6-latest_2026-04-19.yaml
scripts/: build_leaderboards.py  sync_to_hf.py  update_contributors.py  validate_yamls.py
tests/: test_scripts.py
